add files to git

--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,21 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>MyAngularApp</title>
-  <base href="/">
+  <head>
+    <meta charset="utf-8" />
+    <title>MyAngularApp</title>
+    <base href="/" />
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  </head>
+  <body>
+    <main class="container">
+      <app-root>
+        Loading...
+      </app-root>
+    </main>
+
+    <script src="polyfills.pack.js"></script>
+    <script src="main.pack.js"></script>
+  </body>
 </html>
