--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
     <meta charset="utf-8" />
     <title>MyAngularApp</title>
     <base href="/" />
@@ -15,7 +21,7 @@
       </app-root>
     </main>
 
-    <script src="polyfills.pack.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/js-polyfills/0.1.42/polyfill.js"></script>
     <script src="main.pack.js"></script>
   </body>
 </html>
